biocathub_raw_yaml/biocathub-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biocathub-angular-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biocathub-angular-app
  template: 
    metadata:
      labels:
        app: biocathub-angular-app
    spec:
      containers:
      - name: biocathub-angular-app
        image: stephan211087/retrobiohub-frontend:v0.2
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: biocathub-angular-app-service
spec:
  selector:
    app: biocathub-angular-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
