biocathub_raw_yaml/retrobiohub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bch-retrobiohub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bch-retrobiohub
  template: 
    metadata:
      labels:
        app: bch-retrobiohub
    spec:
      containers:
      - name: bch-retrobiohub
        image: stephan211087/retrobiohub
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: bch-retrobiohub-service
spec:
  selector:
    app: bch-retrobiohub
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
